feat: 인기상품조회 로컬 캐시 도입
redis 장애로 캐시 조회가 불가능하면 DB를 통해 집계하고 해당 내역을 로컬 캐시에 저장해서 DB 부하를 줄인다.